k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: 192.168.1.222:32768/app:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
---
